# player

./: CMakeLists.txt  ListViewItemDelegate.cpp  ListViewItemDelegate.h  LyricFrame.cpp  LyricFrame.h  LyricView.cpp  LyricView.h  LyricViewItemDelegate.cpp  LyricViewItemDelegate.h  Makefile  Ui.cpp  Ui.h  about.cpp  about.h  horizontalSlider.css  main.cpp  player.cpp  player.h  player.pro  positionSlider.cpp  positionSlider.h  volumebutton.cpp  volumebutton.h
